✨ feat: 에러 핸들러 및 API 응답 규격화

--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -54,6 +54,9 @@ dependencies {
 
     //Kafka
     implementation 'org.springframework.kafka:spring-kafka'
+
+    //Redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
 dependencyManagement {
