--- a/user-service/src/main/resources/application-secret.yml
+++ b/user-service/src/main/resources/application-secret.yml
@@ -12,3 +12,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
         show_sql: true # hibernate 로그 남길지
+  data:
+    redis:
+      host: localhost
+      port: 6379
