--- a/apiGateway-service/src/main/resources/bootstrap.yml
+++ b/apiGateway-service/src/main/resources/bootstrap.yml
@@ -11,8 +11,8 @@ spring:
   application:
     name: apiGateway-service
 
-management: # Actuator Settings
-  endpoints:
-    web:
-      exposure:
-        include: refresh, health, beans, httptrace
+#management: # Actuator Settings
+#  endpoints:
+#    web:
+#      exposure:
+#        include: refresh, health, beans, httptrace
