--- a/noti-service/build.gradle
+++ b/noti-service/build.gradle
@@ -22,6 +22,7 @@ ext {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    testImplementation 'org.projectlombok:lombok:1.18.22'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -41,12 +42,18 @@ dependencies {
 
     //Kafka
     implementation 'org.springframework.kafka:spring-kafka'
+    //Kafka Test
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
 
     //Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     //Swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+
+    //JUnit + AssertJ
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+    testImplementation 'org.assertj:assertj-core:3.23.1'
 }
 
 dependencyManagement {
