♻️refactor : spring name 재설정

--- a/noti-service/src/main/resources/bootstrap.yml
+++ b/noti-service/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: app-service  # micro service unique ID
+    name: noti-service  # micro service unique ID
   profiles:
     active: dev
   cloud:
