--- a/apiGateway-service/src/main/resources/bootstrap.yml
+++ b/apiGateway-service/src/main/resources/bootstrap.yml
@@ -9,7 +9,7 @@ spring:
   cloud:
     config:
       uri: http://localhost:8888
-      name: database-apiGateway,redis
+      name: database-apiGateway, redis, jwt
   kafka:
     bootstrap-servers: "localhost:9092"
     consumer:
