--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -9,7 +9,7 @@ spring:
   cloud:
     config:
       uri: http://localhost:8888
-      name: database-user,redis
+      name: database-user,redis, jwt
   kafka:
     bootstrap-servers: "localhost:9092"
     consumer:
