--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -72,6 +72,10 @@ dependencies {
     //mail
     implementation 'org.springframework.boot:spring-boot-starter-mail'
 
+    // Thymeleaf
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+
 }
 
 dependencyManagement {
