--- a/weather-service/docker-compose.yml
+++ b/weather-service/docker-compose.yml
@@ -1,7 +1,27 @@
-# docker compose up -d
+version: '3'
 
 services:
   redis:
     image: redis:latest
     ports:
       - "6379:6379"
+
+  zookeeper:
+    container_name: waither-zookeeper
+    image: wurstmeister/zookeeper
+    expose:
+      - "2181"
+
+  kafka:
+    container_name: waither-kafka
+    image: wurstmeister/kafka:latest
+    depends_on:
+      - "zookeeper"
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_ADVERTISED_PORT: 9092
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
