--- a/weather-service/build.gradle
+++ b/weather-service/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     //Kafka
     implementation 'org.springframework.kafka:spring-kafka'
 
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+
     //Swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
 
