--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -75,6 +75,10 @@ dependencies {
     // Thymeleaf
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
+    // Swagger
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.0.4'
+
 
 }
 
