--- a/.github/workflows/apiDocs.yml
+++ b/.github/workflows/apiDocs.yml
@@ -16,17 +16,16 @@ jobs:
         with:
           ref: 'docs/#44'
 
-      - name: generate document html
+      - name: move to docs directory
         run: |
-          cd ./noti-service
-          cp noti-service/docs/noti.json ./
+          cd ./noti-service/docs
 
       - name: redoc-cli-github-action
         uses: seeebiii/redoc-cli-github-action@v9
         with:
           args: 'bundle noti.json --output noti.yaml --ext yaml'
 
-      - name: generate document html
+      - name: Rename Yaml Title & Desc
         run: |
           yq -i '.info.title = "PetStore Backend API Document for FrontEnd"' fe.yaml
           yq -i '.info.description = "Please contact Petstore backend if there are any issues with API"' fe.yaml
@@ -42,10 +41,6 @@ jobs:
           mkdir -p docs
           mv ./noti-service/api-docs.html .
         
-      - name: Checkout document branch
-        uses: actions/checkout@v3
-        with:
-          ref: 'main'
 
       - name: Commit and push build artifacts
         run: |
