--- a/.github/workflows/apiDocs.yml
+++ b/.github/workflows/apiDocs.yml
@@ -44,6 +44,8 @@ jobs:
 
       - name: Commit and push build artifacts
         run: |
+          git config --global user.email "gsu9045000@gmail.com"
+          git config --global user.name "DDonghyeo"
           git add .
           git remote add norigin ${{ secrets.REPOSITORY_URL }}
           git commit -m "📝docs : Generate API Docs"
