--- a/.github/workflows/apiDocs.yml
+++ b/.github/workflows/apiDocs.yml
@@ -44,7 +44,8 @@ jobs:
 
       - name: Commit and push build artifacts
         run: |        
-          git config --global user.name "WaitherTeam"
+          git config --global user.name "DDonghyeo"
+          git config --global user.email "gsu9045000@gmail.com"
           git add .
           git commit -m "📝docs : Generate API Docs"
           git push ${{ secrets.REPOSITORY_URL }} HEAD:apiDocs
