--- a/.github/workflows/apiDocs.yml
+++ b/.github/workflows/apiDocs.yml
@@ -46,10 +46,19 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.DEPLOY_KEY }}
 
-      - name: Commit and push build artifacts
-        run: |        
-          git config --global user.name "DDonghyeo"
-          git config --global user.email "gsu9045000@gmail.com"
-          git add .
-          git commit -m "📝docs : Generate API Docs"
-          git push https://git@github.com/WaitherTeam/Waither-BE.git HEAD:apiDocs
+      # - name: Commit and push build artifacts
+      #   run: |        
+      #     git config --global user.name "DDonghyeo"
+      #     git config --global user.email "gsu9045000@gmail.com"
+      #     git add .
+      #     git commit -m "📝docs : Generate API Docs"
+      #     git push https://git@github.com/WaitherTeam/Waither-BE.git HEAD:apiDocs
+
+      - name: Install SSH Key
+        uses: leigholiver/commit-with-deploy-key@v1.0.4
+        with:
+          source: ./docs/api-docs.html
+          destination_folder: docs
+          destination_repo: WaitherTeam/Waither-BE
+          destination_branch: apiDocs
+          deploy_key: ${{ secrets.DEPLOY_KEY }}
