--- a/.github/workflows/apiDocs.yml
+++ b/.github/workflows/apiDocs.yml
@@ -59,6 +59,6 @@ jobs:
         with:
           source: ./docs/index.html
           destination_folder: docs
-          destination_repo: WaitherTeam/api-docs.io
+          destination_repo: WaitherTeam/WaitherTeam.github.io
           destination_branch: main
           deploy_key: ${{ secrets.DEPLOY_KEY }}
