--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.3'
     id 'io.spring.dependency-management' version '1.1.4'
+    id "org.springdoc.openapi-gradle-plugin" version '1.8.0'
 }
 
 group = 'com.waither'
@@ -76,8 +77,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
     // Swagger
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.0.4'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.1.0'
 
 
 }
@@ -85,6 +86,17 @@ dependencies {
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
+}
+
+openApi {
+    apiDocsUrl.set("http://localhost:3000") // Document URL
+    outputDir.set(file("$rootDir/docs")) // Build Result Path
+    outputFileName.set("user.json") // Build Result File Name
+    groupedApiMappings.set(Map.of("http://localhost:8080/user/api-docs", "user.json"))
+    waitTimeInSeconds.set(60) // Timeout
+    customBootRun {
+        args.add("--spring.profiles.active=dev")
     }
 }
 
