--- a/weather-service/build.gradle
+++ b/weather-service/build.gradle
@@ -49,6 +49,9 @@ dependencies {
 
     //Springdoc
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+
+    // File
+    implementation 'org.apache.poi:poi-ooxml:5.2.0'
 }
 
 openApi {
