📝docs : Update apiDocs.yml

--- a/.github/workflows/apiDocs.yml
+++ b/.github/workflows/apiDocs.yml
@@ -1,10 +1,9 @@
-name: API Docs Integration
+name: api-docs-integration
 
 on:
   push:
     branches:
       - develop
-      - cicd/#61
 
 jobs:
   api-docs-integration:
