--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,9 @@ jobs:
           chmod +x ./weather-service/gradlew
 
       - name: Build with Gradle - config
-        run: ./config-service/gradlew clean build -x test
+        run: |
+          ./config-service/gradlew clean build -x test |& tee config-build.log
+          cat config-build.log
         env:
           CONFIG_GIT_URI: ${{ secrets.CONFIG_GIT_URI }}
           CONFIG_PASSPHRASE: ${{ secrets.CONFIG_PASSPHRASE }}
