--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,6 @@ jobs:
 
       - name: Build with Gradle - config
         run: |
-          ls -all
           cd config-service
           ./gradlew clean build -x test |& tee config-build.log
           cat config-build.log
@@ -41,16 +40,30 @@ jobs:
           CONFIG_PRIVATE_KEY: ${{ secrets.CONFIG_PRIVATE_KEY }}
         
       - name: Run config-service
-        run: gradlew bootRun &
+        run: |
+          ./gradlew bootRun &
+          cd ..
 
       - name: Wait for config-service to start
         run: sleep 5
   
       - name: Build with Gradle - noti-service
-        run: ./noti-service/gradlew clean build -x test
+        run: |
+          cd noti-service
+          ./gradlew clean build -x test |& tee noti-build.log
+          cat noti-build.log
+          cd ..
   
       - name: Build with Gradle - user-service
-        run: ./user-service/gradlew clean build -x test
+        run: |
+          cd user-service
+          ./gradlew clean build -x test |& tee user-build.log
+          cat user-build.log
+          cd ..
   
       - name: Build with Gradle - weather-service
-        run: ./weather-service/gradlew clean build -x test
+        run: |
+          cd weather-service
+          ./gradlew clean build -x test |& tee user-build.log
+          cat user-build.log
+          cd ..
