--- a/weather-service/docker-compose.yml
+++ b/weather-service/docker-compose.yml
@@ -1,6 +1,17 @@
 version: '3'
 
 services:
+  mysql:
+    image: mysql:latest
+    container_name: waither
+    environment:
+      MYSQL_ROOT_USER: root
+      MYSQL_ROOT_PASSWORD: root1234!
+      MYSQL_DATABASE: waither
+    ports:
+      - "3306:3306"
+    volumes:
+      - ./data/mysql:/var/lib/mysql
   redis:
     image: redis:latest
     ports:
