📝docs : 스크립트 수정

--- a/config-service/src/main/resources/bootstrap.yml
+++ b/config-service/src/main/resources/bootstrap.yml
@@ -13,4 +13,4 @@ spring:
           uri: ${CONFIG_GIT_URI}
           ignore-local-ssh-settings: true
           passphrase: ${CONFIG_PASSPHRASE}
-          private-key: ${CONFIG_PRIVATE_KEY_DIR}
+          private-key: ${CONFIG_PRIVATE_KEY}
