--- a/noti-service/src/main/resources/bootstrap.yml
+++ b/noti-service/src/main/resources/bootstrap.yml
@@ -8,7 +8,7 @@ spring:
     active: dev
   cloud:
     config:
-      uri: http://localhost:8888
+      uri: http://config:8888
       name: database-noti,redis
   kafka:
     bootstrap-servers: "localhost:9092"
