--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -8,7 +8,7 @@ spring:
     active: dev
   cloud:
     config:
-      uri: http://localhost:8888
+      uri: http://config:8888
       name: database-user,redis, jwt, smtp, apiDocs-user
   kafka:
     bootstrap-servers: "localhost:9092"
