--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,8 +26,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          ref: prod
 
       #Setting JDK
       - name: Set up JDK 17
@@ -47,13 +45,13 @@ jobs:
           chmod +x ./weather-service/gradlew
 
       #Setting yml
-      - name: Settings for config service
-        run: |
-          cd ./config-service/src/main/resources
-          touch ./bootstrap.yml
-          echo "${{ secrets.CONFIG_APPLICATION_YML }}" > ./bootstrap.yml
-          cd
-      
+#      - name: Settings for config service
+#        run: |
+#          cd ./config-service/src/main/resources
+#          touch ./bootstrap.yml
+#          echo "${{ secrets.CONFIG_APPLICATION_YML }}" > ./bootstrap.yml
+#          cat bootstrap.yml
+
       # DockerHub Login
       - name: Docker Hub Login
         uses: docker/login-action@v2
@@ -87,7 +85,7 @@ jobs:
         run: |
           cd apiGateway-service
           ./gradlew clean build -x test
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/waither-gateway .
+          docker build --no-cache -t ${{ secrets.DOCKERHUB_USERNAME }}/waither-gateway .
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/waither-gateway
           cd ..
           
@@ -104,8 +102,9 @@ jobs:
       - name: Build with Gradle - noti-service
         run: |
           cd noti-service
+          cat src/main/resources/bootstrap.yml
           ./gradlew clean build -x test 
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/waither-noti .
+          docker build --no-cache -t ${{ secrets.DOCKERHUB_USERNAME }}/waither-noti .
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/waither-noti
           cd ..
 
@@ -114,7 +113,7 @@ jobs:
         run: |
           cd user-service
           ./gradlew clean build -x test 
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/waither-user .
+          docker build --no-cache -t ${{ secrets.DOCKERHUB_USERNAME }}/waither-user .
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/waither-user
           cd ..
 
@@ -123,7 +122,7 @@ jobs:
         run: |
           cd weather-service
           ./gradlew clean build -x test 
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/waither-weather .
+          docker build --no-cache -t ${{ secrets.DOCKERHUB_USERNAME }}/waither-weather .
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/waither-weather
           cd ..
   
@@ -147,8 +146,17 @@ jobs:
             export CONFIG_PASSPHRASE=${{ secrets.CONFIG_PASSPHRASE }}
             export DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
 
-            bash /home/docker_init.sh
-            bash /home/common.sh
-            bash /home/deploy.sh
+            cd /home
+            
+            docker-compose pull
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/waither-config
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/waither-gateway
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/waither-noti
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/waither-user
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/waither-weather
+            
+            bash ./docker_init.sh
+            bash ./common.sh
+            bash ./deploy.sh
             
             docker image prune -f
