--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,36 +2,31 @@ version: '3'
 
 services:
 
-#  nginx:
-#    container_name: nginx
-#    image: nginx:latest
-#    ports:
-#      - "80:80"
-#    volumes:
-#      - /home/ec2-user/nginx.conf:/etc/nginx/nginx.conf
-#    depends_on:
-#      - "db"
-#    restart: always #항상 재실행
-
   api-gateway:
     container_name: api-gateway
-    image: ${DOCKERHUB_USERNAME}/waither-gateway
-    expose:
-      - "8000"
+    image: ${DOCKERHUB_USERNAME}/waither-gateway:latest
+    network_mode: host
+    depends_on:
+      - config
+    ports:
+      - "8000:8000"
 #    restart: always
     restart: no
     volumes:
       - /home/ec2-user/logs/api-gateway:/logs
 
+
   config:
     container_name: config
-    image: ${DOCKERHUB_USERNAME}/waither-config
-    expose:
-      - "8888"
+    image: ${DOCKERHUB_USERNAME}/waither-config:latest
+    network_mode: host
+    ports:
+      - "8888:8888"
+    depends_on:
+      - eureka
     environment:
       CONFIG_GIT_URI : ${CONFIG_GIT_URI}
       CONFIG_PASSPHRASE : ${CONFIG_PASSPHRASE}
-#      CONFIG_PRIVATE_KEY_DIR : ${CONFIG_PRIVATE_KEY_DIR}
 #    restart: always
     restart: no
     volumes:
@@ -39,9 +34,10 @@ services:
 
   eureka:
     container_name: eureka
-    image: ${DOCKERHUB_USERNAME}/waither-eureka
-    expose:
-      - "8761"
+    image: ${DOCKERHUB_USERNAME}/waither-eureka:latest
+    network_mode: host
+    ports:
+      - "8761:8761"
 #    restart: always
     restart: no
     volumes:
@@ -49,9 +45,12 @@ services:
 
   user-service:
     container_name: user-service
-    image: ${DOCKERHUB_USERNAME}/waither-user
-    expose:
-      - "8080"
+    image: ${DOCKERHUB_USERNAME}/waither-user:latest
+    network_mode: host
+    depends_on:
+      - config
+    ports:
+      - "8080:8080"
 #    restart: unless-stopped #수동으로 중지되지 않는 이상 항상 재실행
     restart: no
     volumes:
@@ -59,19 +58,25 @@ services:
 
   weather-service:
     container_name: weather-service
-    image: ${DOCKERHUB_USERNAME}/waither-weather
-    expose:
-      - "8081"
+    image: ${DOCKERHUB_USERNAME}/waither-weather:latest
+    network_mode: host
+    depends_on:
+      - config
+    ports:
+      - "8081:8081"
 #    restart: unless-stopped
     restart: no
     volumes:
-      - /home/ec2-user/logs/weather-service:/logs
+      - /home/ec2-user/logs/weather-service:/logs:latest
 
   noti-service:
     container_name: noti-service
-    image: ${DOCKERHUB_USERNAME}/waither-noti
-    expose:
-      - "8082"
+    image: ${DOCKERHUB_USERNAME}/waither-noti:latest
+    network_mode: host
+    depends_on:
+      - config
+    ports:
+      - "8082:8082"
 #    restart: unless-stopped
     restart: no
     volumes:
@@ -93,3 +98,9 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+
+  redis:
+    image: redis
+    container_name: redis
+    ports:
+      - "6379:6379"
