📝docs : bootstrap.yml springdoc 추가

--- a/weather-service/src/main/resources/bootstrap.yml
+++ b/weather-service/src/main/resources/bootstrap.yml
@@ -8,7 +8,7 @@ spring:
     active: dev
   cloud:
     config:
-      uri: http://config:8888
+      uri: http://localhost:8888
       name: database-weather
   kafka:
     bootstrap-servers: "localhost:9092"
@@ -23,8 +23,17 @@ eureka:
     service-url:
       defaultZone : http://127.0.0.1:8761/eureka #Eureka Server's address
 
-management: # Actuator
-  endpoints:
-    web:
-      exposure:
-        include: busrefresh
+#management: # Actuator
+#  endpoints:
+#    web:
+#      exposure:
+#        include: busrefresh
+
+springdoc:
+  api-docs:
+    version: openapi_3_0
+    enabled: true
+    path: /noti/v3/api-docs
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
+  enable-spring-security: true
