📝docs : springdoc 의존성 추가

--- a/noti-service/build.gradle
+++ b/noti-service/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.3'
     id 'io.spring.dependency-management' version '1.1.4'
-    id "org.springdoc.openapi-gradle-plugin" version '1.8.0'
+//    id "org.springdoc.openapi-gradle-plugin" version '1.8.0'
 }
 
 group = 'com.waither'
@@ -62,16 +62,16 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.23.1'
 }
 
-openApi {
-    apiDocsUrl.set("http://localhost:80") // Document URL
-    outputDir.set(file("$rootDir/build/docs")) // Build Result Path
-    outputFileName.set("noti.json") // Build Result File Name
-    groupedApiMappings.set(Map.of("http://localhost:8082/noti/api-docs", "noti.json"))
-    waitTimeInSeconds.set(60) // Timeout
-    customBootRun {
-        args.add("--spring.profiles.active=dev")
-    }
-}
+//openApi {
+//    apiDocsUrl.set("http://localhost:80") // Document URL
+//    outputDir.set(file("$rootDir/build/docs")) // Build Result Path
+//    outputFileName.set("noti.json") // Build Result File Name
+//    groupedApiMappings.set(Map.of("http://localhost:8082/noti/api-docs", "noti.json"))
+//    waitTimeInSeconds.set(60) // Timeout
+//    customBootRun {
+//        args.add("--spring.profiles.active=dev")
+//    }
+//}
 
 dependencyManagement {
     imports {
