--- a/apiGateway-service/build.gradle
+++ b/apiGateway-service/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.security:spring-security-test'
 
+    // Swagger
+    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.1.0'
 
 //    //Spring Boot Actuator
 //    implementation 'org.springframework.boot:spring-boot-starter-actuator'
